# program-library

./: .gitignore  README.md
nft-minter/: Anchor.toml  Cargo.toml  README.md  package-lock.json
nft-minter/client/: hello_world.ts  main.ts  package-lock.json  package.json
nft-minter/client/src/: hello_world.ts  main.ts  tokr.ts
nft-minter/programs/nft-minter/: Cargo.toml
nft-minter/programs/nft-minter/src/: lib.rs
nft-minter/rust/: Cargo.toml
nft-minter/rust/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
nft-minter/tests/: nft-minter.ts
tokrizer/: .gitignore  README.md
tokrizer/client/: package-lock.json  package.json  tsconfig.json
tokrizer/client/src/: add_token_to_vault.ts  fractionalize_nft.ts  main.ts  mint_nft.ts  tokr.ts  tokrData.ts  utils.ts
tokrizer/client/src/instructions/: AddTokenToInactiveVault.ts
tokrizer/client/src/scripts/: add_token_to_vault.ts  fractionalize_nft.ts  get_vault_info.ts  mint_nft.ts  send_fractional_share.ts
tokrizer/rust/: Cargo.toml
tokrizer/rust/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
