
[package]
name = "tokr-nft-minter"
version = "0.0.1"
repository = "https://github.com/TOKR-labs/program-library"
license = ""
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
solana-program = "1.9.5"


[dev-dependencies]
solana-sdk = "1.9.5"
solana-program-test = "1.9.5"

[lib]
name = "nftminter"
crate-type = ["cdylib", "lib"]

[net]
git-fetch-with-cli = true